# analog-clock

./: .gitignore  README.md
analog_clock/analog_clock/: CMakeLists.txt  analogclock.cpp  analogclock.h  main.cpp
analog_clock/build-analog_clock-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
analog_clock/build-analog_clock-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-dace9f64730af38976a2.json  cmakeFiles-v1-d766226c9252cc339807.json  codemodel-v2-df35f31aff9c00619d30.json  directory-.-Debug-66c92877a63064ae98f2.json  index-2024-03-11T05-58-11-0599.json  target-analog_clock-Debug-ea6c5a48f2b31585b29f.json
analog_clock/build-analog_clock-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-b692a115a7f1ca8c41d4.json  cmakeFiles-v1-0b00c69934ccd5bbf2b1.json  codemodel-v2-a102af740a62b535d210.json  directory-.-Debug-02ed49ebc85bc40008d4.json  index-2024-03-11T05-57-08-0207.json  target-analog_clock-Debug-13261c3c00aab8877cf8.json  target-analog_clock_autogen-Debug-072142ebf610f188827f.json  target-analog_clock_autogen_timestamp_deps-Debug-626c660df0e6e8b22dff.json
analog_clock/build-analog_clock-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
analog_clock/build-analog_clock-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/analog_clock_autogen/: deps
analog_clock/build-analog_clock-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/analog_clock_autogen/EWIEGA46WW/: moc_analogclock.cpp
